tt.yaml




apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: test
  # annotations:
  #   cert-manager.io/issuer: ca-issuer
spec:
  ingressClassName: cilium
  # tls:
  #   - hosts:
  #     - sonarr.homelab.net
  #     secretName: sonarr-homelab-cert
  rules:
    # - host: sonarr.homelab.net
    -  http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989

---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: test
spec:
  ports:
    - port: 8989
  selector:
    app: sonarr
---



apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: test
spec:
  selector:
    matchLabels:
      app: sonarr # has to match .spec.template.metadata.labels
  serviceName: sonarr
  replicas: 1 # by default is 1
  # minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app: sonarr # has to match .spec.selector.matchLabels
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: kubernetes.io/hostname
      #           operator: In
      #           values:
      #           - node2


      # terminationGracePeriodSeconds: 10
      containers:
      - name: sonarr
        image: ghcr.io/linuxserver/sonarr:4.0.2.1183-ls230
        ports:
          - name: http
            containerPort: 8989

        readinessProbe:
          httpGet:
              path: /login
              port: 8989
          initialDelaySeconds: 10
          periodSeconds: 15
        volumeMounts:
          - name: config
            mountPath: /config
          
          # - name: data
          #   mountPath: /data

          # - name: downloads
          #   mountPath: /downloads
          # - name: "render-device"
          #   mountPath: "/dev/dri/renderD128"

        resources:
          requests:
            cpu: 200m
            memory: 600Mi
          limits:
            cpu: 500m
            memory: 1500Mi
        securityContext:
          # allowPrivilegeEscalation: false
          # allowPrivilegeEscalation: true
          # capabilities:
          #   add:
          #   - NET_ADMIN
          privileged: true
        # nodeSelector:
        #   kubernetes.io/hostname: node3
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: test-sonarr-config-pvc
      # - name: downloads
      #   persistentVolumeClaim:
      #     claimName: downloads-data-pvc
  # volumeClaimTemplates:
  # - metadata:
  #     name: test-sonarr-config-pvc
  #   spec:
  #     accessModes: [ "ReadWriteMany" ]
  #     storageClassName: longhorn
  #     resources:
  #       requests:
  #         storage: 20Gi
