whoami.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - name: web
      port: 80
      targetPort: 80

  selector:
    app: whoami
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
      # kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: cilium
  rules:
  # - host: test.homelab.net
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dash-ingress
# spec:
#   rules:
#   - host: traefik.homelab.net
#     http:
#       paths:
#       - path: /dashboard/
#         pathType: Prefix
#         backend:
#           service:
#             name: tr-dash
#             port:
#               name: web
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: tr-dash

# spec:
#   type: LoadBalancer
#   ports:
#     - name: web
#       port: 80
#       targetPort: 9000

#   selector:
#     app.kubernetes.io/name: traefik
